# backend/src/main/java/com/github/marcelorodrigo/dutytracker/usecase/response/oncall/OnCallPeriodListResponse.java
@@ -2,4 +2,5 @@ package com.github.marcelorodrigo.dutytracker.usecase.response.oncall;
 
 import java.util.List;
 
-public record OnCallPeriodListResponse(List<OnCallPeriodResponse> periods) {}
+public record OnCallPeriodListResponse(
+        List<OnCallPeriodResponse> content, int page, int size, long totalElements, int totalPages) {}
